--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
-
+/* body {
+    height: 1000px;
+} */
 .viewer {
-    width: 1080px;
+    width: 960px;
     height: 486px;
     margin: auto;
+    margin-top: 6%;
     display: flex;
+    vertical-align: middle;
 }
 button {
-    width: 10%;
+    width: 5%;
     background-image: url("http://stayathome-syllabus.greenfox.academy/week03/assets/arrow.svg");
     background-repeat: no-repeat;
     background-position: center;
@@ -16,7 +20,7 @@ button {
     transform: scaleX(-1);
 }
 .photo {
-    width: 80%;
+    width: 90%;
     padding: 0;
     background-image: url(photos/csillagjazmin.jpg);
     background-repeat: no-repeat;
@@ -24,13 +28,14 @@ button {
 }
 ul {
     width: 50%;
-    height: 150px;
+    height: 100px;
     margin: auto;
     list-style-type: none;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0;
+    /* outline: 1px solid red; */
 }
 .index {    
     width: 60px;
