--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-/* body {
-    height: 1000px;
-} */
+body {
+    background: linear-gradient(0.25turn, #d9b38c, #f2e6d9, #f9f2e1, #f2e6d9, #d9b38c);
+    /*height: 1000px; */
+}
 .viewer {
     width: 960px;
     height: 486px;
@@ -8,13 +9,30 @@
     margin-top: 6%;
     display: flex;
     vertical-align: middle;
+    box-shadow: 5px 10px 18px #d9b38c;
 }
 button {
     width: 5%;
-    background-image: url("http://stayathome-syllabus.greenfox.academy/week03/assets/arrow.svg");
+    background-color: #f2e6d9;
+    border: 1px solid #f2e6d9;
+    position: relative;    
+}
+.icon {
+    height: 48px;
+    width: 48px;
+    position: absolute;
+    top: 45%;
+    left: 0;
+    background: url("http://stayathome-syllabus.greenfox.academy/week03/assets/arrow.svg");
+    filter: invert(27%) sepia(90%) saturate(200%) hue-rotate(346deg) brightness(104%) contrast(97%);
     background-repeat: no-repeat;
     background-position: center;
-    border: 1px solid lightgray;
+}
+button:hover {
+    box-shadow: 5px 10px 18px #d9b38c;
+    background: #ecd9c6;
+    background: linear-gradient(0.25turn, #ecd9c6, #f2e6d9);
+    border: 1px solid #ecd9c6;
 }
 .next {
     transform: scaleX(-1);
@@ -43,6 +61,14 @@ ul {
     background-image: url(photos/csillagjazmin.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    border: 5px solid #f9f2ec;
+    box-shadow: 0px 10px 10px #d9b38c;
+}
+.index:hover {
+    width: 65px;
+    height: 65px;
+    border: 3px solid #f9f2ec;
+    box-shadow: 0px 10px 5px #d9b38c;
 }
 .one {
     background-position-x: 70%;
