--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     background: linear-gradient(0.25turn, #d9b38c, #f2e6d9, #f9f2e1, #f2e6d9, #d9b38c);
     /*height: 1000px; */
+    font-family: 'Barlow Semi Condensed', sans-serif;  
 }
 .viewer {
     width: 960px;
@@ -43,6 +44,7 @@ button:hover {
     background-image: url(photos/csillagjazmin.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    position: relative;
 }
 ul {
     width: 50%;
@@ -63,6 +65,8 @@ ul {
     background-repeat: no-repeat;
     border: 5px solid #f9f2ec;
     box-shadow: 0px 10px 10px #d9b38c;
+    position: relative;
+    display: inline-block;
 }
 .index:hover {
     width: 65px;
@@ -108,4 +112,57 @@ ul {
 .ten {
     background-image: url(photos/rangpur.jpg);
     background-position-x: 40%;
+}
+.text {
+    position: absolute;
+    bottom: 0;
+    padding-left: 2%;
+    background: #1a0d00;
+    opacity: 0.7;
+    color: #ffffcc;
+    visibility: hidden;
+}
+h1, p {
+    /* outline: 1px solid red; */
+    margin: 0;
+    padding-top: 1%;
+}
+h1 {
+    font-size: large;    
+}
+p { 
+    padding-bottom: 1%;
+}
+.photo:hover .text {
+    visibility: visible;
+}
+.index .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: #1a0d00;
+    color: #ffffcc;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 115%;
+    left: 50%;
+    margin-left: -60px;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+.index .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #392613 transparent transparent transparent;
+}
+.index:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
 }
