--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ button:hover {
 .photo {
     width: 90%;
     padding: 0;
-    background-image: url(photos/csillagjazmin.jpg);
+    /* background-image: url(photos/csillagjazmin.jpg); */
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
